[gd_scene load_steps=3 format=3 uid="uid://bsw2guwlntowv"]

[ext_resource type="Script" path="res://scenes/popups/save_select.gd" id="1_mhpl6"]
[ext_resource type="PackedScene" uid="uid://3u3rrddd76a0" path="res://scenes/components/saved_game.tscn" id="2_q7qke"]

[node name="SaveSelect" type="Window"]
title = "CHOOSE_A_SAVE"
initial_position = 1
size = Vector2i(400, 100)
wrap_controls = true
transient = true
exclusive = true
unresizable = true
popup_window = true
min_size = Vector2i(400, 0)
max_size = Vector2i(1000, 600)
script = ExtResource("1_mhpl6")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SaveAsButton" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "SAVE_AS"

[node name="SavedGame" parent="ScrollContainer/VBoxContainer" instance=ExtResource("2_q7qke")]
layout_mode = 2

[node name="SavedGame2" parent="ScrollContainer/VBoxContainer" instance=ExtResource("2_q7qke")]
layout_mode = 2

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="go_back_requested" from="." to="." method="_on_go_back_requested"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/SaveAsButton" to="." method="_on_save_as_button_pressed"]
